force-app/main/default/objects/PS_ASU_SP_SVCIND_V__x/PS_ASU_SP_SVCIND_V__x.object-meta.xml
<CustomObject>
    <description>Data source script can be found here: https://docs.google.com/spreadsheets/d/1bFjSsWNvNY04dkSXxMIuAaHKo1A4SQ9gaV1HBEq7s9w/edit#gid=0</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>PS_ASU_SP_SVCIND_Vs</externalName>
    <label>Service Indicator (external)</label>
    <pluralLabel>Service Indicator (external)</pluralLabel>
</CustomObject>