force-app/main/default/objects/PS_ASU_SP_SVCIND_V__x/fields/ADMIT_TERM__c.field-meta.xml
<CustomField>
    <fullName>ADMIT_TERM__c</fullName>
    <description>Data sourced from PS_ADM_MC_VW.ADMIT_TERM</description>
    <externalDeveloperName>ADMIT_TERM</externalDeveloperName>
    <label>Admitted Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Service Indicator (external)</relationshipLabel>
    <relationshipName>Service_Indicator_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>