force-app/main/default/objects/PS_ASU_SP_SVCIND_V__x/fields/DESCR__c.field-meta.xml
<CustomField>
    <fullName>DESCR__c</fullName>
    <description>Data sourced from PS_SRVC_IND_CD_TBL.DESCR</description>
    <externalDeveloperName>DESCR</externalDeveloperName>
    <label>Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>