force-app/main/default/objects/PS_ASU_SP_SVCIND_V__x/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <description>Data sourced from PS_PERSON.EMPLID</description>
    <externalDeveloperName>EMPLID</externalDeveloperName>
    <label>Contact</label>
    <length>10</length>
    <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Indicator (external)</relationshipLabel>
    <relationshipName>Service_Indicator_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>