force-app/main/default/objects/PS_ASU_SP_SVCIND_V__x/fields/POS_SRVC_INDICATOR__c.field-meta.xml
<CustomField>
    <fullName>POS_SRVC_INDICATOR__c</fullName>
    <description>Data sourced from PS_SRVC_IND_DATA.POS_SRVC_INDICATOR</description>
    <externalDeveloperName>POS_SRVC_INDICATOR</externalDeveloperName>
    <label>Positive Service Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>