force-app/main/default/objects/PS_ASU_SP_SVCIND_V__x/fields/REASON_DESCR__c.field-meta.xml
<CustomField>
    <fullName>REASON_DESCR__c</fullName>
    <description>Data sourced from PS_SRVC_IN_RSN_TBL.DESCR</description>
    <externalDeveloperName>REASON_DESCR</externalDeveloperName>
    <label>Reason</label>
    <length>40</length>
    <type>Text</type>
</CustomField>