force-app/main/default/objects/PS_ASU_SP_SVCIND_V__x/fields/SCC_SI_END_DT__c.field-meta.xml
<CustomField>
    <fullName>SCC_SI_END_DT__c</fullName>
    <description>Data sourced from PS_SRVC_IND_DATA.SCC_SI_END_DT</description>
    <externalDeveloperName>SCC_SI_END_DT</externalDeveloperName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>