force-app/main/default/objects/PS_ASU_SP_SVCIND_V__x/fields/SCC_SI_END_TERM__c.field-meta.xml
<CustomField>
    <fullName>SCC_SI_END_TERM__c</fullName>
    <description>Data sourced from PS_SRVC_IND_DATA.SCC_SI_END_TERM</description>
    <externalDeveloperName>SCC_SI_END_TERM</externalDeveloperName>
    <label>End Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Service Indicator (external)</relationshipLabel>
    <relationshipName>Service_Indicator_external2</relationshipName>
    <type>IndirectLookup</type>
</CustomField>