force-app/main/default/objects/PS_ASU_SP_SVCIND_V__x/fields/SRVC_IND_ACT_TERM__c.field-meta.xml
<CustomField>
    <fullName>SRVC_IND_ACT_TERM__c</fullName>
    <description>Data sourced from PS_SRVC_IND_DATA.SRVC_IND_ACT_TERM</description>
    <externalDeveloperName>SRVC_IND_ACT_TERM</externalDeveloperName>
    <label>Start Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Service Indicator (external)</relationshipLabel>
    <relationshipName>Service_Indicator_external1</relationshipName>
    <type>IndirectLookup</type>
</CustomField>