force-app/main/default/objects/PS_ASU_SP_SVCIND_V__x/fields/SRVC_IND_ACTIVE_DT__c.field-meta.xml
<CustomField>
    <fullName>SRVC_IND_ACTIVE_DT__c</fullName>
    <description>Data sourced from PS_SRVC_IND_DATA.SRVC_IND_ACTIVE_DT</description>
    <externalDeveloperName>SRVC_IND_ACTIVE_DT</externalDeveloperName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>