force-app/main/default/objects/PS_ASU_SP_SVCIND_V__x/fields/SRVC_IND_CD__c.field-meta.xml
<CustomField>
    <fullName>SRVC_IND_CD__c</fullName>
    <description>Data sourced from PS_SRVC_IND_DATA.SRVC_IND_CD</description>
    <externalDeveloperName>SRVC_IND_CD</externalDeveloperName>
    <label>Service Indicator Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>