force-app/main/default/objects/PS_ASU_SP_SVCIND_V__x/fields/SRVC_IND_DTTM__c.field-meta.xml
<CustomField>
    <fullName>SRVC_IND_DTTM__c</fullName>
    <description>Data sourced from PS_SRVC_IND_DATA.SRVC_IND_DTTM</description>
    <externalDeveloperName>SRVC_IND_DTTM</externalDeveloperName>
    <label>Service Indicator Created Date</label>
    <type>DateTime</type>
</CustomField>